@@ -1,0 +1,41 @@
+name: 🚀 Release
+on:
+  push:
+    tags: [v*]
+jobs:
+  release:
+    name: Release on CPAN and GitHub
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+    - name: Check out the repo
+      uses: actions/checkout@v4
+    - name: Setup Perl
+      uses: shogo82148/actions-setup-perl@v1
+    - name: Install Release Dependencies
+      run: cpanm -qn Module::Build CPAN::Uploader
+    - name: Package the Release
+      id: package
+      run: perl Build.PL && ./Build manifest && ./Build dist && echo "tarball=$(./Build tarball_name )" >> $GITHUB_OUTPUT
+    - name: Generate Release Changes
+      run: ./Build latest_changes
+    - name: Release on CPAN
+      env:
+        CPANUSER: ${{ secrets.CPAN_USERNAME }}
+        CPANPASS: ${{ secrets.CPAN_PASSWORD }}
+      run: cpan-upload --user "$CPANUSER" --password "$CPANPASS" '${{ steps.package.outputs.tarball }}'
+    - name: Create GitHub Release
+      id: release
+      uses: actions/create-release@v1
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body_path: latest_changes.md
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.release.outputs.upload_url }}
+        asset_path: ./${{ steps.package.outputs.tarball }}
+        asset_name: ${{ steps.package.outputs.tarball }}
+        asset_content_type: application/gzip
