@@ -1,9 +1,12 @@
-_build
-blib
-WWW-PGXN-*
-MANIFEST
-MANIFEST.bak
-META.*
-Build
-MYMETA.*
-Makefile*
+/_build
+/blib
+/WWW-PGXN-*
+/MANIFEST
+/MANIFEST.bak
+/*META.*
+/Build
+.DS_Store
+/Makefile*
+/pm_to_blib
+/latest_changes.md
+.vscode/
