@@ -2,7 +2,34 @@ use strict;
 use warnings;
 use Module::Build;
 
-Module::Build->new(
+my $class = Module::Build->subclass(
+    class => 'PGXN::Build',
+    code => q{
+        sub valid_licenses { { postgresql => 'PostgreSQL' } }
+        sub ACTION_tarball_name { print shift->dist_dir . ".tar.gz\n" }
+        sub ACTION_latest_changes {
+            my $self = shift;
+            (my $dv = $self->dist_version) =~ s/^v//;
+            open my $in, '<:raw', 'Changes' or die "Cannot open Changes: $!\n";
+            open my $out, '>:raw', 'latest_changes.md' or die "Cannot open latest_changes.md: $!\n";
+            while (<$in>) { last if /^\Q$dv\E\b/ }
+            print {$out} "Changes for v$dv\n";
+            while (<$in>) {
+                last if /^\s*$/;
+                chomp;
+                if (s/^\s+-/-  /) {
+                    print {$out} "\n";
+                } else {
+                    s/^\s+/ /;
+                }
+                print {$out} $_;
+            }
+            $self->add_to_cleanup('latest_changes.md');
+        }
+    },
+);
+
+$class->new(
     module_name        => 'WWW::PGXN',
     license            => 'perl',
     create_makefile_pl => 'traditional',
