@@ -1,6 +1,9 @@
 Revision history for Perl extension WWW-PGXN.
 
 0.12.5
+      - Added CI tests for Perls 5.10 - 5.38 on Linux, macOS, and Windows.
+      - Fixed issues that caused test failures on Windows.
+      - Updated relevant URLs from http to https.
 
 0.12.4  2013-11-06T05:56:15Z
       - Removed the Pod tests from the distribution.
